# pyAKMotorCtrl

./: .coverage  README.md  pyproject.toml
examples/: basic_position_control.py  speed_control_keyboard.py
pyakmotorctrl/: __init__.py  motor.py
tests/: test_motor.py
